agregado selector con atributo en ng-content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
 <app-lista color="azul">
   <h1>Listado de productos</h1>
   <h2>Este es el listado de productos actualmente disponibles</h2>
-  <table>
+  <table data>
     <tr>
       <td>Nombre</td>
       <td>Precio</td>
