--- a/src/app/lista.component.html
+++ b/src/app/lista.component.html
@@ -1,4 +1,3 @@
 <p>{{ color }}</p>
-<ng-content select="h1"></ng-content>
 <ng-content select="h2"></ng-content>
-<ng-content></ng-content>
+<ng-content select="[data]"></ng-content>
